0.1_demo/L0/app/src/main/java/com/example/fileSystem/error/errIndex.java
package com.example.fileSystem.error;

public class errIndex extends error {
    public errIndex(String message) {
        super(message);
    }
}
